Finish off the html render

--- a/15_importing_webservice/template_config/template.html
+++ b/15_importing_webservice/template_config/template.html
@@ -12,8 +12,23 @@
 </head>
 <body>
 <h1>Weather today</h1>
-<p>We'll put the weather here ${template_variable}</p>
 
+<table>
+    <tbody>
+    <tr>
+    <td>temperature</td>
+    <td>${temperature}</td>
+    </tr>
+    <tr>
+    <td>wind</td>
+    <td>${wind}</td>
+    </tr>
+    <tr>
+    <td>description</td>
+    <td>${description}</td>
+    </tr>
+    </tbody>
+    </table>
 
 <p><em>Chris Guest </em></p>
 </body>
